--- a/style.css
+++ b/style.css
@@ -169,3 +169,141 @@ body{
     }
     
 }
+
+@media (max-width:400px) {
+    
+    
+#bg-phone{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+     display: block;
+
+}
+#bg{
+    display: none;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#time1,#time2,#time3,#time4,#time5{
+    z-index:2000;
+    position:relative;
+    top: -60px;
+    left:0px;
+    padding:2%;
+    border-radius: 5px;
+    background-color: wheat;
+    font-size: 1rem;
+    font-weight: 400;
+    display: flex;
+     font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: 20px;
+ 
+   
+}
+#icon1{
+    display: none;
+}
+
+
+#div-one{
+    position: relative;
+    top:200px;
+    width: 90%;
+
+
+}
+#bg-phone{
+    width: 100%;
+    height: 100vh;
+}
+#afghan{
+    position:absolute;
+    top: 80vh;
+    left: 40%;
+    z-index: 1000;
+
+}
+
+#time-one,#time-two,#time-tree,#time-fure,#time-five{
+    position:absolute;
+    top:-55px;
+    left:60%;
+    font-size: 1rem;
+     font-family: "Tagesschrift", system-ui;
+  font-weight: 200;
+  font-style: normal;
+  z-index: 2000;
+  display: none;
+  
+}
+#time-two{
+    top: 0px;
+    z-index: 3000;
+}
+
+#clock{
+    z-index: 1000;
+    position: absolute;
+    margin: auto;
+    top: 40px;
+    text-align: center;
+    font-size: 2rem;
+    color: wheat;
+
+}
+.flag{
+    z-index: 1000;
+    width:30px;
+    height:30px;
+    position:absolute;
+    top: 30px;
+    left:13%;
+    border-radius: 8px;
+    display: none;
+}
+.flag1{
+    left:75%;
+}
+
+#icon-one,#icon-two{
+    display: none;
+}
+.small{
+    position: absolute;
+    top: 27vh;
+    left: 60%;
+    z-index: 3000;
+    display:table-column;
+    font-size: 1rem;
+    
+}
+.small span{
+    position: relative;
+    display: flex;
+    background-color: aliceblue;
+    margin:5px ;
+    margin-bottom:25.5px;
+    padding: 3px;
+    border-radius: 4px;
+}
+#clock{
+    background-color: aliceblue;
+    padding-top:4px;
+    color: black;
+    width: 100%;
+    top: 0;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom: 0.3px solid rgb(99, 77, 49);
+}
+
+}
